fix spacing between cards on mobile

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/_panel.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.panel.info{
+  margin: 0 0 2rem 0;
+}
+
 .panel.info .title{
   text-transform: none;
 }
